--- a/projects/interactive-study/bouncyBall/index.html
+++ b/projects/interactive-study/bouncyBall/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
+    <head>
+        <title>Interactive Study</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
 
-<head>
-    <title>Interactive Study</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-<body>
-    <script type="module" src="app.js"></script>
-</body>
-
+    <body>
+        <script type="module" src="app.js"></script>
+    </body>
 </html>
