--- a/projects/CV/index.html
+++ b/projects/CV/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="https://cdn.readyfront.co.kr/svg/CV.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>프론트 개발자 김대한</title>
     </head>
