feat: gpt3.5 -> gpt4.5 upgrade

--- a/nm-projects/chatbot/express-app/index.html
+++ b/nm-projects/chatbot/express-app/index.html
@@ -135,7 +135,7 @@
     </head>
 
     <body>
-        <h2 id="title">나비야~</h2>
+        <h2 id="title">GPT4-Turbo</h2>
         <div id="chat-container">
             <img
                 id="image"
